@@ -37,6 +37,7 @@ compose.desktop {
 
         jvmArgs += listOf(
             "--add-modules", "java.sql",
+            "--add-modules", "jdk.incubator.vector",
             "-Dapi.version=${property("api.version")}",
             "-Dcore.version=${property("core.version")}",
             "-Dui.version=${property("ui.version")}",
@@ -47,7 +48,26 @@ compose.desktop {
             targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb)
             packageName = "TextVariantExplorer"
 
+            licenseFile.set(project.file("LICENSE.md"))
+
             modules += listOf("java.sql")
+
+            linux {
+                iconFile.set(project.file("ui/src/main/resources/icon.png"))
+            }
+
+            windows {
+                iconFile.set(project.file("ui/src/main/resources/icon.ico"))
+
+                menu = true
+                upgradeUuid = "C4AF61D5-8472-482D-B2A0-F92E32D7A18C"
+            }
+
+            macOS {
+                iconFile.set(project.file("ui/src/main/resources/icon.icns"))
+
+                appCategory = "public.app-category.utilities"
+            }
         }
     }
 }
